# kominfoyk

./: app.py  docker-compose.yml  index.html  pyproject.toml  utils.py
data/: create.sql  insert.sql  query.sql
database/: __init__.py  objects.py
repositories/: courses.py  users.py
templates/: courses-fee.html  courses-med.html  courses.html
tests/: test.py
