[tool.poetry]
name = "kominfoyk"
version = "0.1.0"
description = ""
authors = ["Ghazy <dianghazy@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
asyncpg = "^0.29.0"
passlib = "^1.7.4"
pyjwt = "^2.9.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
